@@ -138,6 +138,7 @@ private:
     symbolizers syms_;
     expression_ptr filter_;
     bool else_filter_;
+    bool also_filter_;
 public:
     rule()
         : name_(),
@@ -147,7 +148,8 @@ public:
           max_scale_(std::numeric_limits<double>::infinity()),
           syms_(),
           filter_(boost::make_shared<mapnik::expr_node>(true)),
-          else_filter_(false) {}
+          else_filter_(false), 
+          also_filter_(false) {}
     
     rule(const std::string& name,
          const std::string& title="",
@@ -159,7 +161,8 @@ public:
           max_scale_(max_scale_denominator),
           syms_(),
           filter_(boost::make_shared<mapnik::expr_node>(true)),
-          else_filter_(false) {}
+          else_filter_(false), 
+          also_filter_(false)  {}
     
     rule(const rule& rhs)    
         : name_(rhs.name_),
@@ -169,7 +172,8 @@ public:
           max_scale_(rhs.max_scale_),
           syms_(rhs.syms_),
           filter_(rhs.filter_),
-          else_filter_(rhs.else_filter_) {}
+          else_filter_(rhs.else_filter_), 
+          also_filter_(rhs.also_filter_) {}
     
     rule& operator=(rule const& rhs) 
     {
@@ -290,6 +294,16 @@ public:
         return else_filter_;
     }
     
+    void set_also(bool also_filter)
+    {
+        also_filter_=also_filter;
+    }
+    
+    bool has_also_filter() const
+    {
+        return also_filter_;
+    }
+    
     bool active(double scale) const
     {
         return ( scale >= min_scale_ - 1e-6 && scale < max_scale_ + 1e-6);
@@ -307,6 +321,7 @@ private:
         syms_=rhs.syms_;
         filter_=rhs.filter_;
         else_filter_=rhs.else_filter_;
+        also_filter_=rhs.also_filter_;
     }
 };
 
